Added paginated responses for articles, endpoint for author's articles and author not found exception.